force-app/main/default/objects/Quote/fields/netsuite_conn__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Document_Id__c</fullName>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>