force-app/main/default/objects/Quote/fields/netsuite_conn__NetSuite_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Quote_Number__c</fullName>
    <label>NetSuite Quote #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>