force-app/main/default/objects/Quote/fields/netsuite_conn__NetSuite_Sync_Err__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
    <label>NetSuite Sync Error</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>