force-app/main/default/objects/Quote/fields/netsuite_conn__NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Sync_Error__c</fullName>
    <label>NetSuite Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>