force-app/main/default/objects/Quote/fields/netsuite_conn__PDF_File__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__PDF_File__c</fullName>
    <formula>IF( netsuite_conn__Document_Id__c == null , &apos;&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + netsuite_conn__Document_Id__c , Name + &apos;.pdf&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite PDF File</label>
    <type>Text</type>
</CustomField>