force-app/main/default/objects/Quote/fields/netsuite_conn__Push_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To NetSuite</label>
    <type>Checkbox</type>
</CustomField>