force-app/main/default/objects/Quote/fields/netsuite_conn__Sync_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync In Progress</label>
    <type>Checkbox</type>
</CustomField>